name:                MonadicRP
version:             0.0.0.1
synopsis:            Monad abstraction for relativistic programming
--description:         
--homepage:            https://github.com/sdiehl/kaleidoscope
license:             GPL-3
license-file:        LICENSE
author:              Ted Cooper
maintainer:          anthezium@gmail.com
copyright:           2015 Ted Cooper
Category:            Concurrent
build-type:          Simple
cabal-version:       >=1.10
--Bug-Reports:         https://github.com/sdiehl/kaleidoscope/issues

--Flag Tutorial
--  Description: Compile with pandoc preprocessor
--  Default:     False

--Source-Repository head
--    Type: git
--    Location: git@github.com:sdiehl/kaleidoscope.git

library 
  exposed-modules:         RP
  default-language:        Haskell2010
  hs-source-dirs:          src
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:       
      atomic-primops
    , base                 >= 4.6
    , containers           >= 0.5.5.1
    , mtl
    , transformers


executable RPListInt 
  default-language:        Haskell2010
  main-is:                 RPListInt.hs
  hs-source-dirs:          src
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:           
      atomic-primops
    , base                 >= 4.6
    , containers           >= 0.5.5.1
    , mtl
    , transformers

executable RPListMove 
  default-language:        Haskell2010
  main-is:                 RPListMove.hs
  hs-source-dirs:          src
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:           
      atomic-primops
    , base                 >= 4.6
    , containers           >= 0.5.5.1
    , mtl
    , transformers
