name:                MonadicRP
version:             0.0.0.1
synopsis:            Monad abstraction for relativistic programming
--description:         
homepage:            https://github.com/anthezium/MonadicRP
license:             GPL-3
license-file:        LICENSE
author:              Ted Cooper
maintainer:          anthezium@gmail.com
copyright:           2015 Ted Cooper
Category:            Concurrent
build-type:          Simple
cabal-version:       >=1.10
Bug-Reports:         https://github.com/anthezium/MonadicRP/issues

--Flag Tutorial
--  Description: Compile with pandoc preprocessor
--  Default:     False

Source-Repository head
    Type: git
    Location: git@github.com:anthezium/MonadicRP.git

library 
  exposed-modules:         RP
  default-language:        Haskell2010
  hs-source-dirs:          src
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:       
      atomic-primops
    , base                 >= 4.6
    , containers           >= 0.5.5.1
    , ghc-prim
    , mtl
    , transformers

executable RPListTest
  default-language:        Haskell2010
  main-is:                 RPListTest.hs
  hs-source-dirs:          src
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:           
      atomic-primops
    , base                 >= 4.6
    , containers           >= 0.5.5.1
    , ghc-prim
    , mtl
    , transformers

executable RPListIntTest 
  default-language:        Haskell2010
  main-is:                 RPListIntTest.hs
  hs-source-dirs:          src
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:           
      atomic-primops
    , base                 >= 4.6
    , containers           >= 0.5.5.1
    , ghc-prim
    , mtl
    , transformers

executable RPListMoveTest 
  default-language:        Haskell2010
  main-is:                 RPListMoveTest.hs
  hs-source-dirs:          src
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:           
      atomic-primops
    , base                 >= 4.6
    , containers           >= 0.5.5.1
    , ghc-prim
    , mtl
    , transformers

executable RPmoveCbackTest 
  default-language:        Haskell2010
  main-is:                 RPmoveCbackTest.hs
  hs-source-dirs:          src
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:           
      atomic-primops
    , base                 >= 4.6
    , containers           >= 0.5.5.1
    , ghc-prim
    , mtl
    , transformers

executable RPmoveCbackNoSyncTest 
  default-language:        Haskell2010
  main-is:                 RPmoveCbackNoSyncTest.hs
  hs-source-dirs:          src
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:           
      atomic-primops
    , base                 >= 4.6
    , containers           >= 0.5.5.1
    , ghc-prim
    , mtl
    , transformers

executable RPmoveBforwardTest 
  default-language:        Haskell2010
  main-is:                 RPmoveBforwardTest.hs
  hs-source-dirs:          src
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:           
      atomic-primops
    , base                 >= 4.6
    , containers           >= 0.5.5.1
    , ghc-prim
    , mtl
    , transformers

executable RPManyListMoveTest 
  default-language:        Haskell2010
  main-is:                 RPManyListMoveTest.hs
  hs-source-dirs:          src
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  build-depends:           
      atomic-primops
    , base                 >= 4.6
    , containers           >= 0.5.5.1
    , ghc-prim
    , mtl
    , transformers

